fix scrolling issue on iOS

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 html {
   overflow-x: hidden;
 }
+body { overflow-x: hidden; }
 h1, h2, h3, h4, p {
   margin: 0;
   font-weight: normal;
